--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,10 +106,10 @@ height: 100%;
     font-size: 2.5rem;
     font-weight: 500;
 }
-.img-overlay h1{
-    font-size: 3.2rem;
+.img-overlay h2{
+    font-size: 2.5rem;
     color: #e31111;
-    letter-spacing: 5px;
+    letter-spacing: 3px;
  
 }
 .img-overlay h3{
@@ -140,4 +140,9 @@ height: 100%;
     color: rgb(241, 243, 244);
     
 }
-.swiper-button-next btn
+.swiper-button-next {
+    margin-right: 50px;
+}
+.swiper-button-prev {
+    margin-left: 50px;
+}
