--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,8 +108,8 @@ height: 100%;
 }
 .img-overlay h2{
     font-size: 2.5rem;
-    color: #e31111;
-    letter-spacing: 3px;
+    color: #d6d8fe;
+    letter-spacing: 5px;
  
 }
 .img-overlay h3{
