--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,6 +63,15 @@ body {
     bottom: -4px;
     left: 20px;
 }
+
+#mobile {
+    display: none;
+    align-items: center;
+}
+
+#close {
+    display: none;
+}
 /*navrbar ends*/
 
 
@@ -145,4 +154,120 @@ height: 100%;
 }
 .swiper-button-prev {
     margin-left: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*media query*/
+@media (max-width:799px){
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #E3E6F3;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+        padding: 80px 0 0 10px;
+        transition: 0.3s;
+    }
+
+    #navbar.active {
+        right: 0px;
+    }
+    #navbar li {
+        margin-bottom: 25px;
+    }
+
+   
+    #close {
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
+
+   
+    .swiper-button-next {
+        margin-right: 20px;
+    }
+    .swiper-button-prev {
+        margin-left: 20px;
+    }
+    .img-overlay p{
+        font-size: 2rem;
+        font-weight: 500;
+    }
+    .img-overlay h2{
+        font-size: 2.2rem;
+        color: #d6d8fe;
+        letter-spacing: 5px;
+     
+    }
+    .img-overlay h3{
+        font-size: 2rem;
+        color: rgb(31, 74, 114);
+        letter-spacing: 5px;
+    }
+    .img-overlay a{
+        background: #088178;
+        text-decoration: none;
+        color: #f7f3f3;
+        padding: 0.6rem 1rem;
+        display: inline-block;
+        margin-top: 2rem;
+        border-radius: 4px;
+        transition: all 0.2s ease-in-out;;
+    }
+}
+
+
+@media (max-width:477px) {
+    
+
+    #header {
+
+        padding: 10px 30px;
+
+    }
+
+       .btn{
+        visibility: hidden;
+    }
+    .swiper-button-next {
+        margin-right: 20px;
+    }
+    .swiper-button-prev {
+        margin-left: 20px;
+    }
+    .img-overlay p{
+        font-size: 1,5rem;
+        font-weight: 500;
+    }
+    .img-overlay h2{
+        font-size: 2rem;
+        color: #d6d8fe;
+        letter-spacing: 4px;
+     
+    }
+    .img-overlay h3{
+        font-size: 1.8rem;
+        color:#c1adbd ;
+        letter-spacing: 4px;
+    }
 }
